Updated search.php and logged.html
Trying stuff

--- a/logged.html
+++ b/logged.html
@@ -34,7 +34,7 @@
 		</script>
 
 		Please select the dates</br>
-		<select name="day" id="day">
+		<select name="day1" id="day">
 			<option value="1">1</option>
 			<option value="2">2</option>
 			<option value="3">3</option>
@@ -68,7 +68,7 @@
 			<option value="31">31</option>
 		</select>
 
-		<select name="month" id="month">
+		<select name="month1" id="month">
 			<option value="0">January</option>
 			<option value="1">February</option>
 			<option value="2">March</option>
@@ -83,7 +83,7 @@
 			<option value="11">December</option>
 		</select>
 
-		<select name="year" id="year">
+		<select name="year1" id="year">
 			<option value="2016">2016</option>
 			<option value="2017">2017</option>
 			<option value="2018">2018</option>
@@ -101,7 +101,7 @@
 	  	});
 		</script>
 
-		<select name="day" id="day">
+		<select name="day2" id="day">
 			<option value="1">1</option>
 			<option value="2">2</option>
 			<option value="3">3</option>
@@ -135,7 +135,7 @@
 			<option value="31">31</option>
 		</select>
 
-		<select name="month" id="month">
+		<select name="month2" id="month">
 			<option value="0">January</option>
 			<option value="1">February</option>
 			<option value="2">March</option>
@@ -150,7 +150,7 @@
 			<option value="11">December</option>
 		</select>
 
-		<select name="year" id="year" align="right">
+		<select name="year2" id="year" align="right">
 			<option value="2016">2016</option>
 			<option value="2017">2017</option>
 			<option value="2018">2018</option>
