--- a/logged.html
+++ b/logged.html
@@ -2,6 +2,8 @@
 	<head>
 		<link rel="stylesheet" href="StartPageStyles.css">
 		<style>tr.indent{ padding-left: 6em }</style>
+		<!-- for turkish chars -->
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>	
 	</head>
 	<body>
 	<form action="search.php" method="post">
@@ -69,18 +71,18 @@
 		</select>
 
 		<select name="month1" id="month">
-			<option value="0">January</option>
-			<option value="1">February</option>
-			<option value="2">March</option>
-			<option value="3">April</option>
-			<option value="4">May</option>
-			<option value="5">June</option>
-			<option value="6">July</option>
-			<option value="7">August</option>
-			<option value="8">September</option>
-			<option value="9">October</option>
-			<option value="10">November</option>
-			<option value="11">December</option>
+			<option value="1">January</option>
+			<option value="2">February</option>
+			<option value="3">March</option>
+			<option value="4">April</option>
+			<option value="5">May</option>
+			<option value="6">June</option>
+			<option value="7">July</option>
+			<option value="8">August</option>
+			<option value="9">September</option>
+			<option value="10">October</option>
+			<option value="11">November</option>
+			<option value="12">December</option>
 		</select>
 
 		<select name="year1" id="year">
@@ -136,18 +138,18 @@
 		</select>
 
 		<select name="month2" id="month">
-			<option value="0">January</option>
-			<option value="1">February</option>
-			<option value="2">March</option>
-			<option value="3">April</option>
-			<option value="4">May</option>
-			<option value="5">June</option>
-			<option value="6">July</option>
-			<option value="7">August</option>
-			<option value="8">September</option>
-			<option value="9">October</option>
-			<option value="10">November</option>
-			<option value="11">December</option>
+			<option value="1">January</option>
+			<option value="2">February</option>
+			<option value="3">March</option>
+			<option value="4">April</option>
+			<option value="5">May</option>
+			<option value="6">June</option>
+			<option value="7">July</option>
+			<option value="8">August</option>
+			<option value="9">September</option>
+			<option value="10">October</option>
+			<option value="11">November</option>
+			<option value="12">December</option>
 		</select>
 
 		<select name="year2" id="year" align="right">
