--- a/logged.html
+++ b/logged.html
@@ -35,7 +35,10 @@
 	  	});
 		</script>
 
-		Please select the dates</br>
+		Please select the dates:</br></br>
+
+		From&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+		&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspTo</br>
 		<select name="day1" id="day">
 			<option value="1">1</option>
 			<option value="2">2</option>
