--- a/index.html
+++ b/index.html
@@ -22,10 +22,36 @@
 </tr>
 
 <tr>
-<td colspan="2" align="center"><input type="submit" value="Submit"/></td>
+<td colspan="2" align="center"><input type="submit" value="Register"/></td>
 </tr>
 
-</table>
 </form>
+
+</table>
+
+<form action="login.php" method="post">
+
+<h1>Login</h1>
+
+<table border="0">
+
+<tr>
+	<td>Username </td>
+	<td align="center"><input type="text" name="username" size="30" /></td>
+</tr>
+
+<tr>
+	<td>Password </td>
+	<td align="center"><input type="password" name="password" size="30" /></td>
+</tr>
+
+<tr>
+<td colspan="2" align="center"><input type="submit" value="Login"/></td>
+</tr>
+
+</from>
+
+</table>
+
 </body>
 </html>
