--- a/logged.html
+++ b/logged.html
@@ -16,6 +16,7 @@
 		<select name ="type" id="type">
 			<option value="%">------</option>
 			<option value="Cinema">Cinema</option>
+			<option value="Exhibition">Exhibition</option>
 			<option value="Theatre">Theatre</option>
 			<option value="Opera">Opera</option>
 			<option value="Concert">Concert</option>
@@ -34,9 +35,10 @@
 			<option value="Istinye Park">Istinye Park</option>
 			<option value="Zorlu Center">Zorlu Center</option>
 			<option value="Istanbul Park">Istanbul Park</option>
-			<option value="Harbiye Açıkhava Tiyatrosu">Harbiye Açıkhava Tiyatrosu</option>
+			<option value="Harbiye Acikhava Tiyatrosu">Harbiye Acikhava Tiyatrosu</option>
 			<option value="Istanbul Modern">Istanbul Modern</option>
 			<option value="Sakip Sabanci Muzesi">Sakip Sabanci Muzesi</option>
+			<option value="Ankamall">Ankamall</option>
 		</select>
 		</br>
 		</br>
